# tortoise_test

./: README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  juice.py
app/models/: __init__.py  customer.py  juice.py  order.py  supplier.py
app/repositories/: __init__.py  juice.py
app/schemas/: __init__.py  juice.py
app/services/: __init__.py  juice.py
migrations/models/: 1_20250608193311_None.py
